# task_note_manager

./: .flaskenv  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.py  manage.py  pyproject.toml  pytest.ini.py  requirements.txt  run.py  setup.py  structure.txt
.github/workflows/: tests.yml
app/: .flaskenv  __init__.py  app.py  extensions.py  forms.py  init_data.py  models.py
app/auth/: __init__.py  forms.py  routes.py
app/categories/: __init__.py  forms.py  routes.py
app/db/: create_tables.py
app/errors/: handlers.py
app/forms/: auth_forms.py
app/main/: __init__.py  routes.py
app/models/: User.py  __init__.py  database.py  models.py
app/notes/: __init__.py  forms.py  routes.py
app/routes/: auth.py  categories.py  main.py  notes.py  tasks.py
app/static/css/: style.css
app/static/js/: main.js
app/tasks/: __init__.py  forms.py  routes.py
app/templates/: base.html  categories.html  categories_create.html  categories_edit.html  create_category.html  create_note.html  create_task.html  edit_category.html  edit_note.html  edit_task.html  index.html  login.html  notes.html  notes_create.html  notes_edit.html  notes_index.html  register.html  tasks.html  tasks_create.html  tasks_edit.html  tasks_index.html
app/templates/auth/: login.html  register.html
app/templates/categories/: index.html
app/templates/errors/: 400.html  401.html  402.html  403.html  404.html  (+23 more)
migrations/versions/: 7b59a49ad0ab_initial_migration.py  ef54a03a1464_initial_migration.py
tests/: conftest.py  test_auth.py  test_categories.py  test_database.py  test_models.py  test_notes.py  test_tasks.py
